--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 DATABASE_URI =  postgresql://my_database_he6p_user:7dCWh8gZ2f6V2YieOfn1mgS4b9wfx7vo@dpg-coh5e0v79t8c73fsrohg-a.oregon-postgres.render.com/send_it_db
+
+CLOUDINARY_CLOUD_NAME=dwsryxnpa
+CLOUDINARY_API_KEY=754923864247672
+CLOUDINARY_API_SECRET=c7Mc8fNkbuDeQDMG4VIKh0x5SiE
