--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ DATABASE_URI =  postgresql://my_database_he6p_user:7dCWh8gZ2f6V2YieOfn1mgS4b9wfx
 CLOUDINARY_CLOUD_NAME=dwsryxnpa
 CLOUDINARY_API_KEY=754923864247672
 CLOUDINARY_API_SECRET=c7Mc8fNkbuDeQDMG4VIKh0x5SiE
+
+SMTP_USERNAME="senditapp.cci@gmail.com"
+SMTP_PASSWORD="gymw hsth ogdp hcrk"
